[package]
name = "ex_pgp"
version = "0.1.0"
authors = []
edition = "2018"

[lib]
name = "ex_pgp"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
rustler = "0.23.0"
pgp = "0.7.2"
smallvec = "1.8.0"
rand = "0.8"
hex = "0.4.3"
rsa = "0.6.0"

[patch.crates-io]
# Temporarily lock pgp to commit (master branch at time of writing) because the currently release crate locks zeroize to =1.3
pgp = { git = "https://github.com/tari-project/rpgp.git", rev = "32939dbe86565d5ede769a7907ec42dfdf353849" }
